policygenerator/policy-sets/stable/rtc-policies/input-kyverno-policies/add-default-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-rescource-requests-limits
  annotations:
    policies.kyverno.io/title: Add Resource limits to Pods and Jobs
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Job, Pod
    kyverno.io/kyverno-version: 1.7.1
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      As application workloads share cluster resources, it is important to limit resources
      requested and consumed by each Pod. It is recommended to require resource requests and
      limits per Pod, especially for memory and CPU. If a Namespace level request or limit is specified,
      defaults will automatically be applied to each Pod based on the LimitRange configuration.
      This policy will add a default set of request and limits to jobs and pods.      
spec:
  rules:
    - name: add-default-resource-requests-limits
      match:
        all:
        - resources:
            kinds:
              - Job
              - Pod
            namespaces:
              - "user-cte3-test-*"
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - resources:
                  requests:
                    +(cpu): 10m
                    +(memory): 10Mi
                  limits:
                    +(cpu): 1
                    +(memory): 20Gi
